tests/ui/typech/trait_missing_method.lm
struct A { }

trait Foo {
    fn foo();
}

use Foo: A { }
